adding requests to get all photographers and models
