# src/model/model.dto.ts
@@ -1,14 +1,14 @@
-export interface IPhotographer {
-    photograph_avatar: string;
+export interface IModel {
+    model_avatar: string;
     full_name: string;
     description: string;
     average_raiting: number;
     count_of_reviews: number;
 }
 
-export interface IPhotographerParams {
+export interface IModelParams {
     price_per_hour?: number[];
-    types_of_photography?: string[];
+    types_of_model?: string[];
     limit?: number;
     offset?: number;
 }
